[package]
name = "ringo-srs"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
tempfile = "3"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
